<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.login.LoginActivity"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:padding="15dp"
            app:srcCompat="@drawable/ic_24_px_flag" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:text="@string/text_logo"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/color_logo" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_close_black"
            android:padding="15dp"

            android:layout_gravity="right|center_vertical" />

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_gravity="center"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="38dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:letterSpacing="0.03"
        android:lineSpacingExtra="4sp"
        android:textColor="@color/color_logo" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginEnd="38dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/user_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="20"/>

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="38dp"
            android:layout_marginRight="38dp"
            android:background="@drawable/input_bottom" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginEnd="38dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/pwd"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="20"/>

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="38dp"
            android:layout_marginRight="38dp"
            android:background="@drawable/input_bottom" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="240dp"
            android:layout_gravity="center_vertical"
            android:text="@string/login"
            android:layout_weight="0.1"
            android:textColor="@color/white"
            android:background="@drawable/button_rounded_background"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvForgetPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="15dp"
        android:letterSpacing="0.03"
        android:lineSpacingExtra="3sp"
        android:text="@string/forget_pass"
        android:textColor="@color/color_logo"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="3sp"
            android:letterSpacing="0.03"
            android:padding="15dp"
            android:text="@string/share"
            android:textSize="15sp"
            android:textColor="#67727b" />

        <TextView
            android:id="@+id/tvFaq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="3sp"
            android:letterSpacing="0.03"
            android:padding="15dp"
            android:text="@string/faq"
            android:textSize="15sp"
            android:textColor="#67727b" />

        <TextView
            android:id="@+id/tvContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="3sp"
            android:letterSpacing="0.03"
            android:padding="15dp"
            android:text="@string/contact"
            android:textSize="15sp"
            android:textColor="#67727b" />

    </LinearLayout>

</LinearLayout>