<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.activities.account.AccountActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="12dp"
                android:paddingLeft="12dp"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="40dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivRightArrow"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentEnd="true"
                        app:srcCompat="@drawable/icon_right_arrow"
                        android:layout_centerVertical="true" />

                    <TextView
                        android:id="@+id/tvUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="Endless Hiroto" />

                </RelativeLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:text="@string/subscribe"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:background="@color/black" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="end|center_vertical"
                        android:layout_marginEnd="12dp"
                        app:srcCompat="@drawable/ic_next" />

                </FrameLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_gravity="bottom"
                android:background="@drawable/space_separate" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="12dp"
                android:paddingLeft="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp" >

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/ic_save_stories" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/savedstories"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginEnd="12dp"
                    android:layout_gravity="end|center_vertical"
                    app:srcCompat="@drawable/icon_right_arrow" />

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_gravity="bottom"
                android:background="@drawable/space_separate" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="12dp"
                android:paddingLeft="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/displaytheme"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginEnd="12dp"
                    android:layout_gravity="end|center_vertical"
                    app:srcCompat="@drawable/icon_right_arrow" />

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="bottom"
                android:background="@drawable/space_separate" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="12dp"
                android:paddingLeft="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/emailpreferences"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginEnd="12dp"
                    android:layout_gravity="end|center_vertical"
                    app:srcCompat="@drawable/icon_right_arrow" />

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="bottom"
                android:background="@drawable/space_separate" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="12dp"
                android:paddingLeft="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/videopreferences"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginEnd="12dp"
                    android:layout_gravity="end|center_vertical"
                    app:srcCompat="@drawable/icon_right_arrow" />

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="bottom"
                android:background="@drawable/space_separate" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="12dp"
                android:paddingLeft="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/notifications"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginEnd="12dp"
                    android:layout_gravity="end|center_vertical"
                    app:srcCompat="@drawable/icon_right_arrow" />

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="bottom"
                android:background="@drawable/space_separate" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="12dp"
                android:paddingLeft="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/region"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginEnd="12dp"
                    android:layout_gravity="end|center_vertical"
                    app:srcCompat="@drawable/icon_right_arrow" />

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_gravity="bottom"
                android:background="@drawable/space_separate" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="12dp"
                android:paddingLeft="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp" >

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/ic_star" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/rateapp"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="12dp"
                android:paddingLeft="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp" >

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/ic_faq" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/faq2"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="12dp"
                android:paddingLeft="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp" >

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/ic_mail" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/contactsupport"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="12dp"
                android:paddingLeft="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp" >

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/ic_logout" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/logout"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_gravity="bottom"
                android:background="@drawable/space_separate" />

            <LinearLayout
                android:id="@+id/llBottomMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:elevation="1dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/scores"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/privacypolicy"
                    android:textSize="@dimen/ts_home_menu" />

                <TextView
                    android:id="@+id/discover"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/termsofservice"
                    android:textSize="@dimen/ts_home_menu" />

                <TextView
                    android:id="@+id/account"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/version"
                    android:textSize="@dimen/ts_home_menu" />

            </LinearLayout>

            <include
                android:id="@+id/bottomMenu"
                layout="@layout/bottom_menu_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>